<resources>
    <string name="app_name">Naturalis</string>
    <string name="naturalis">Naturalis</string>
    <string name="search_products">Search products</string>
    <string name="ceai">Ceai</string>
    <string name="sirop">Sirop</string>
    <string name="uleiuri_esentiale">Uleiuri esentiale</string>
    <string name="suplimente">Suplimente</string>
    <string name="ulei">Ulei</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="essential_oils">Essential oils</string>
    <string name="syrop">Syrop</string>
    <string name="tea">Tea</string>
    <string name="supplements">Supplements</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="go_back">Back</string>
    <string name="buy">Buy</string>
    <string name="add_product">Add Product</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="description">Description</string>
    <string name="back">Back</string>

    <string-array name="categories">
        <item>Tea</item>
        <item>Syrup</item>
        <item>Oil</item>
        <item>Supplements</item>
    </string-array>
</resources>